[gd_scene load_steps=102 format=2]

[ext_resource path="res://Resources/spark.png" type="Texture" id=1]
[ext_resource path="res://Resources/dash_sheet.png" type="Texture" id=2]
[ext_resource path="res://PlatformerDash/Effects/DashImpact.gd" type="Script" id=3]
[ext_resource path="res://PlatformerDash/Effects/DashImpactShaderMaterial.tres" type="Material" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 256, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 288, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 320, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 352, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 192, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 224, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 256, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 288, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 320, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 352, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 224, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 288, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 320, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 352, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 32, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 64, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 96, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 128, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 160, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 192, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 224, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 256, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 288, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 320, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 352, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 256, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 288, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 320, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 2 )
region = Rect2( 352, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 2 )
region = Rect2( 32, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 2 )
region = Rect2( 64, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 2 )
region = Rect2( 96, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 2 )
region = Rect2( 128, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 2 )
region = Rect2( 160, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 2 )
region = Rect2( 224, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 2 )
region = Rect2( 256, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 2 )
region = Rect2( 288, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 2 )
region = Rect2( 320, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 2 )
region = Rect2( 352, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 2 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 2 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 2 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 2 )
region = Rect2( 160, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 2 )
region = Rect2( 192, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 2 )
region = Rect2( 224, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 2 )
region = Rect2( 256, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 2 )
region = Rect2( 288, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 320, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 2 )
region = Rect2( 352, 160, 32, 32 )

[sub_resource type="SpriteFrames" id=97]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), null ],
"loop": false,
"name": "left",
"speed": 14.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), null ],
"loop": false,
"name": "right",
"speed": 14.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), null ],
"loop": false,
"name": "up",
"speed": 14.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), null ],
"loop": false,
"name": "upleft",
"speed": 14.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), null ],
"loop": false,
"name": "downright",
"speed": 14.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), null ],
"loop": false,
"name": "down",
"speed": 14.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), null ],
"loop": false,
"name": "downleft",
"speed": 14.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), null ],
"loop": false,
"name": "upright",
"speed": 14.0
} ]

[node name="DashImpact" type="Node2D"]
script = ExtResource( 3 )

[node name="ImpactAnim" type="AnimatedSprite" parent="."]
frames = SubResource( 97 )
animation = "up"

[node name="ImpactWave" type="Sprite" parent="."]
material = ExtResource( 4 )
scale = Vector2( 157.396, 157.396 )
z_index = 5
z_as_relative = false
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
